tooling/nargo_cli/tests/snapshots/execution_failure/signed_division_by_minus_one_overflow/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion is always false: Attempt to divide with overflow
  ┌─ src/main.nr:2:5
  │
2 │     -128_i8 / -1
  │     ------------ As a result, the compiled circuit is ensured to fail. Other assertions may also fail during execution
  │
  = Call stack:
    1: main
            at src/main.nr:2:5

Aborting due to 1 previous error
