tooling/nargo_cli/tests/snapshots/execution_failure/signed_division_by_minus_one_overflow/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Attempt to divide with overflow
  ┌─ src/main.nr:2:5
  │
2 │     -128_i8 / -1
  │     ------------
  │

Error interpreting main function
